les7 fix